B.4.1: Better security setup, including fix of deploy B.4.2: Triviallest way of catching exceptions in batch processing.
StringUtils.conjoin varargsified.
Some unit tests fixed.